--- a/docs/source/pages/0020.md
+++ b/docs/source/pages/0020.md
@@ -45,13 +45,13 @@ There are two rules:
 
 ### Approach
 
-- Maintain a stack to monitor opening parentheses
-- Pop if a matching closing parentheses found
-- Push if an opening parentheses is found
-- `return True` if stack is empty and looped over the entire string
-- `return False` if stack is not empty after looping over the string
-- `return False` if string starts with a closing parentheses
-- `return False` if last element of stack (opening parentheses) does not matches to current closing parentheses
+1. Maintain a stack to monitor opening parentheses
+1. Pop if a matching closing parentheses found
+1. Push if an opening parentheses is found
+1. `return True` if stack is empty and looped over the entire string
+1. `return False` if stack is not empty after looping over the string
+1. `return False` if string starts with a closing parentheses
+1. `return False` if last element of stack (opening parentheses) does not matches to current closing parentheses
 
 ### Complexity
 - Time complexity: `O(n)`
