--- a/docs/source/pages/0007.md
+++ b/docs/source/pages/0007.md
@@ -6,20 +6,22 @@ Given a signed 32-bit integer `x`, return `x` with its digits reversed. If rever
 
 **Assume the environment does not allow you to store 64-bit integers (signed or unsigned).**
 
-
 **Example 1:**
+
 ```text
 Input: x = 123
 Output: 321
 ```
 
 **Example 2:**
+
 ```text
 Input: x = -123
 Output: -321
 ```
 
 **Example 3:**
+
 ```text
 Input: x = 120
 Output: 21
@@ -30,6 +32,12 @@ Output: 21
 - `-2^31 <= x <= 2^31 - 1`
 
 ## Solution
+
+### Intuition
+
+Reverse the number and check if it is in the range.
+
+### Code
 
 ```python
 class Solution:
@@ -47,6 +55,8 @@ class Solution:
 
         new_num = -new_num if isnegative else new_num
 
-        if new_num < -2147483648 or new_num > 2147483647 : return 0
-        else: return new_num
+        if new_num < -2147483648 or new_num > 2147483647:
+            return 0
+        else:
+            return new_num
 ```
